--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -994,7 +994,9 @@ clustered_data
 
 If for some reason we need access to just the cluster assignments,
 we can extract those from the fit as a data frame using 
-the `extract_cluster_assignment` function.
+the `extract_cluster_assignment` function. Note that in this case,
+the cluster assignments variable is named `.cluster`, while the `augment`
+function earlier creates a variable named `.pred_cluster`.
 
 ```{r 10-kmeans-extract-clusterasgn}
 extract_cluster_assignment(kmeans_fit)
@@ -1010,7 +1012,7 @@ to obtain that first.
 cluster_plot <- ggplot(clustered_data,
   aes(x = flipper_length_mm, 
       y = bill_length_mm, 
-      color = .cluster), 
+      color = .pred_cluster), 
   size = 2) +
   geom_point() +
   labs(x = "Flipper Length", 
@@ -1052,15 +1054,80 @@ kmeans_spec
 hidden_print(kmeans_spec)
 ```
 
-```
+```{r 10-kmeans-tune-results}
 kmeans_results <- workflow() |>
     add_recipe(kmeans_recipe) |>
     add_model(kmeans_spec) |>
-    tune_cluster(resamples = 1, grid = penguin_clust_ks) |>
+    tune_cluster(resamples = apparent(penguins), grid = penguin_clust_ks) |>
     collect_metrics()
 kmeans_results
 ```
 
+```{r 10-kmeans-next}
+kmeans_results <- kmeans_results |> 
+    filter(.metric == "sse_within_total") |>
+    mutate(tot.withinss = mean) |>
+    select(num_clusters, tot.withinss)
+kmeans_results
+```
+
+Now that we have `tot.withinss` and `k` as columns in a data frame, we can make a line plot 
+(Figure \@ref(fig:10-plot-choose-k)) and search for the "elbow" to find which value of K to use. 
+
+```{r 10-plot-choose-k, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A plot showing the total WSSD versus the number of clusters."}
+elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = tot.withinss)) +
+  geom_point() +
+  geom_line() +
+  xlab("K") +
+  ylab("Total within-cluster sum of squares") +
+  scale_x_continuous(breaks = 1:9) + 
+  theme(text = element_text(size = 12))
+
+elbow_plot
+```
+
+It looks like 3 clusters is the right choice for this data.
+But why is there a "bump" in the total WSSD plot here? 
+Shouldn't total WSSD always decrease as we add more clusters? 
+Technically yes, but remember:  K-means can get "stuck" in a bad solution. 
+Unfortunately, for K = 8 we had an unlucky initialization
+and found a bad clustering! \index{K-means!restart, nstart} 
+We can help prevent finding a bad clustering 
+by trying a few different random initializations 
+via the `nstart` argument (Figure \@ref(fig:10-choose-k-nstart) 
+shows a setup where we use 10 restarts). 
+When we do this, K-means clustering will be performed 
+the number of times specified by the `nstart` argument,
+and R will return to us the best clustering from this.
+The more times we perform K-means clustering,
+the more likely we are to find a good clustering (if one exists).
+What value should you choose for `nstart`? The answer is that it depends
+on many factors: the size and characteristics of your data set,
+as well as how powerful your computer is.
+The larger the `nstart` value the better from an analysis perspective, 
+but there is a trade-off that doing many clusterings 
+could take a long time.
+So this is something that needs to be balanced.
+
+```
+penguin_clust_ks <- tibble(k = 1:9) |>
+  rowwise() |>
+  mutate(penguin_clusts = list(kmeans(standardized_data, nstart = 10, k)),
+         glanced = list(glance(penguin_clusts)))
+
+clustering_statistics <- penguin_clust_ks |>
+  unnest(glanced)
+
+elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
+  geom_point() +
+  geom_line() +
+  xlab("K") +
+  ylab("Total within-cluster sum of squares") +
+  scale_x_continuous(breaks = 1:9) + 
+  theme(text = element_text(size = 12))
+
+elbow_plot
+```
 
 
 
