--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -1130,6 +1130,42 @@ elbow_plot
 ```
 
 
+Testing monte carlo splits (w/o replacement)
+```{r}
+spls <- mc_cv(penguins, prop = 0.999, times = 4)
+```
+
+collect metrics without summaries so we can use min
+```{r}
+kmeans_results <- workflow() |>
+    add_recipe(kmeans_recipe) |>
+    add_model(kmeans_spec) |>
+    tune_cluster(resamples = spls, grid = penguin_clust_ks) |>
+    collect_metrics(summarize=FALSE)
+kmeans_results
+```
+
+minimize
+```{r}
+kmeans_results <- kmeans_results |>
+   filter(.metric == "sse_within_total") |>
+   group_by(num_clusters) |>
+   summarize(min_wssd = min(.estimate))
+kmeans_results
+```
+
+```{r 10-plot-choose-k-2, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A plot showing the total WSSD versus the number of clusters."}
+elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = min_wssd)) +
+  geom_point() +
+  geom_line() +
+  xlab("K") +
+  ylab("Total within-cluster sum of squares") +
+  scale_x_continuous(breaks = 1:9) + 
+  theme(text = element_text(size = 12))
+
+elbow_plot
+```
+
 
 
 
