initial conversion of class M/B to Malignant/Benign in cls1

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -192,12 +192,25 @@ glimpse(cancer)
 ```
 
 From the summary of the data above, we can see that `Class` is of type character
-(denoted by `<chr>`). Since we will be working with `Class` as a
-categorical statistical variable, we will convert it to a factor using the
-function `as_factor`. \index{factor!as\_factor}
-
+(denoted by `<chr>`). We can use the `distinct`\index{distinct} function to see all the unique
+values present in that column. We see that there are two diagnoses: benign, represented by `"B"`,
+and malignant, represented by `"M"`.
+```{r 05-levels}
+cancer |>
+  distinct(Class)
+```
+We will also improve the readability of our analysis by renaming `"M"` to
+`"Malignant"` and `"B"` to `"Benign"` using the `replace` method. The `replace` method \index{replace}
+is used to replace values satisfying a logical condition in a data frame with other values,
+and has three arguments: the original data frame column to modify, 
+the logical statement to check, and the new value to use.
+Furthermore, since we will be working with `Class` as a categorical
+variable, it is a good idea to convert it to a factor type using the `as_factor` function. \index{factor!as\_factor}
+using the astype method on the cancer data frame. 
 ```{r 05-class}
 cancer <- cancer |>
+  mutate(Class = replace(Class, Class == "M", "Malignant")) |>
+  mutate(Class = replace(Class, Class == "B", "Benign")) |>
   mutate(Class = as_factor(Class))
 glimpse(cancer)
 ```
@@ -205,8 +218,8 @@ glimpse(cancer)
 Recall that factors have what are called "levels", which you can think of as categories. We
 can verify the levels of the `Class` column by using the `levels`\index{levels}\index{factor!levels} function.
 This function should return the name of each category in that column. Given
-that we only have two different values in our `Class` column (B for benign and M 
-for malignant), we only expect to get two names back.  Note that the `levels` function requires a *vector* argument; 
+that we only have two different values in our `Class` column (Benign and Malignant), we 
+expect to get only two names back.  Note that the `levels` function requires a *vector* argument; 
 so we use the `pull` function to extract a single column (`Class`) and 
 pass that into the `levels` function to see the categories 
 in the `Class` column. 
