replace M/B with malignant/benign in clsfn2

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -234,7 +234,9 @@ set.seed(1)
 # load data
 cancer <- read_csv("data/unscaled_wdbc.csv") |>
   # convert the character Class variable to the factor datatype
-  mutate(Class = as_factor(Class)) 
+  mutate(Class = as_factor(Class))  |>
+  # rename the factor values to be more readable
+  mutate(Class = fct_recode(Class, "Malignant" = "M", "Benign" = "B"))
 
 # create scatter plot of tumor cell concavity versus smoothness,
 # labeling the points be diagnosis class
@@ -242,8 +244,7 @@ perim_concav <- cancer |>
   ggplot(aes(x = Smoothness, y = Concavity, color = Class)) +
   geom_point(alpha = 0.5) +
   labs(color = "Diagnosis") +
-  scale_color_manual(labels = c("Malignant", "Benign"), 
-                     values = c("orange2", "steelblue2")) + 
+  scale_color_manual(values = c("orange2", "steelblue2")) + 
   theme(text = element_text(size = 12))
 
 perim_concav
@@ -268,7 +269,7 @@ in the data does not influence the data that ends up in the training and testing
 Second, it **stratifies** the \index{stratification} data by the class label, to ensure that roughly
 the same proportion of each class ends up in both the training and testing sets. For example,
 in our data set, roughly 63% of the
-observations are from the benign class (`B`), and 37% are from the malignant class (`M`),
+observations are from the benign class, and 37% are from the malignant class,
 so `initial_split` ensures that roughly 63% of the training data are benign, 
 37% of the training data are malignant,
 and the same proportions exist in the testing data.
@@ -958,8 +959,7 @@ for (i in 1:length(ks)) {
                size = 5.) +
     labs(color = "Diagnosis") +
     ggtitle(paste("K = ", ks[[i]])) +
-    scale_color_manual(labels = c("Malignant", "Benign"), 
-                       values = c("orange2", "steelblue2"))  +
+    scale_color_manual(values = c("orange2", "steelblue2"))  +
   theme(text = element_text(size = 18), axis.title=element_text(size=18)) 
   }
 
