replace target and outcome with response throughout

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -749,8 +749,8 @@ knn_spec
 
 In order to fit the model on the breast cancer data, we need to pass the model specification
 and the data set to the `fit` function. We also need to specify what variables to use as predictors
-and what variable to use as the target. Below, the `Class ~ Perimeter + Concavity` argument specifies 
-that `Class` is the target variable (the one we want to predict),
+and what variable to use as the response. Below, the `Class ~ Perimeter + Concavity` argument specifies 
+that `Class` is the response variable (the one we want to predict),
 and both `Perimeter` and `Concavity` are to be used as the predictors.
 
 ```{r 05-tidymodels-4}
@@ -861,7 +861,7 @@ In the `tidymodels` framework, all data preprocessing happens
 using a `recipe` from [the `recipes` R package](https://recipes.tidymodels.org/) [@recipes].
 Here we will initialize a recipe\index{recipe} \index{tidymodels!recipe|see{recipe}} for 
 the `unscaled_cancer` data above, specifying
-that the `Class` variable is the target, and all other variables are predictors:
+that the `Class` variable is the response, and all other variables are predictors:
 
 ```{r 05-scaling-2, results=FALSE, message=FALSE, echo = TRUE}
 uc_recipe <- recipe(Class ~ ., data = unscaled_cancer)
@@ -872,7 +872,7 @@ uc_recipe
 hidden_print_cli(uc_recipe)
 ```
 
-So far, there is not much in the recipe; just a statement about the number of targets
+So far, there is not much in the recipe; just a statement about the number of response variables
 and predictors. Let's add 
 scaling (`step_scale`) \index{recipe!step\_scale} and 
 centering (`step_center`) \index{recipe!step\_center} steps for 
@@ -904,7 +904,7 @@ as well as naming particular columns with the same syntax as the `select` functi
 For example:
 
 - `all_nominal()` and `all_numeric()`: specify all categorical or all numeric variables
-- `all_predictors()` and `all_outcomes()`: specify all predictor or all target variables
+- `all_predictors()` and `all_outcomes()`: specify all predictor or all response variables
 - `Area, Smoothness`: specify both the `Area` and `Smoothness` variable
 - `-Class`: specify everything except the `Class` variable
 
@@ -1324,7 +1324,7 @@ First we will load the data, create a model, and specify a recipe for how the da
 
 ```{r 05-workflow, message = FALSE, warning = FALSE}
 # load the unscaled cancer data 
-# and make sure the target Class variable is a factor
+# and make sure the response variable, Class, is a factor
 unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") |>
   mutate(Class = as_factor(Class))
 
