improve writing introducing tibbles

--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -195,14 +195,15 @@ image_read("img/wrangling/data_frame_slides_cdn.009.jpeg") %>%
   image_crop("3632x700")
 ```
 
-The functions from the `tidyverse` package that we use often give us a
-special class of data frame called a *tibble*. Tibbles have some additional \index{tibble}
-features and benefits over the built-in data frame object. These include the
+Data frames are actually included in R itself, without the need for any additional packages. However, the 
+`tidyverse` functions that we use 
+throughout this book all work with a special kind of data frame called a *tibble*. Tibbles have some additional \index{tibble}
+features and benefits over built-in data frames in R. These include the
 ability to add useful attributes (such as grouping, which we will discuss later)
 and more predictable type preservation when subsetting. 
 Because a tibble is just a data frame with some added features, 
 we will collectively refer to both built-in R data frames and
-tibbles as data frames in this book.
+tibbles as *data frames* in this book.
 
 >  **Note:** You can use the function `class` \index{class} on a data object to assess whether a data
 > frame is a built-in R data frame or a tibble. If the data object is a data
