use more standard md notation for numbered list in preface

--- a/source/preface.Rmd
+++ b/source/preface.Rmd
@@ -11,8 +11,8 @@ analyses allows both you and others to easily double-check and validate your wor
 
 At a high level, in this book, you will learn how to 
 
-(1) identify common problems in data science, and 
-(2) solve those problems with reproducible and auditable workflows.
+1. identify common problems in data science, and 
+2. solve those problems with reproducible and auditable workflows.
 
 Figure \@ref(fig:img-chapter-overview) summarizes what you will learn in each chapter
 of this book.
