align with py version

--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -806,6 +806,9 @@ with higher numbers of people who speak it as their primary language at home
 compared to French in Montréal, then we can use `filter` to obtain rows 
 where the value of `most_at_home` is greater than 
 `r format(most_french, scientific = FALSE, big.mark = ",")`.
+We use the `>` symbol to look for values *above* a threshold, and the `<` symbol
+to look for values *below* a threshold. The `>=` and `<=` symbols similarly look
+for *equal to or above* a threshold and *equal to or below* a threshold.
 
 ``` {r}
 filter(official_langs, most_at_home > 2669195)
