plot line size -> linewidth

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -360,7 +360,7 @@ perim_concav_with_new_point +
     y = new_point[2],
     xend = pull(neighbors[1, attrs[1]]),
     yend = pull(neighbors[1, attrs[2]])
-  ), color = "black", size = 0.5)
+  ), color = "black", linewidth = 0.5)
 ```
 
 ```{r 05-knn-3, echo = FALSE}
@@ -407,7 +407,7 @@ perim_concav_with_new_point2 +
     y = new_point[2],
     xend = pull(neighbors[1, attrs[1]]),
     yend = pull(neighbors[1, attrs[2]])
-  ), color = "black", size = 0.5)
+  ), color = "black", linewidth = 0.5)
 ```
 
 To improve the prediction we can consider several
@@ -424,17 +424,17 @@ perim_concav_with_new_point2 +
     x = new_point[1], y = new_point[2],
     xend = pull(neighbors[1, attrs[1]]),
     yend = pull(neighbors[1, attrs[2]])
-  ), color = "black", size = 0.5) +
+  ), color = "black", linewidth = 0.5) +
   geom_segment(aes(
     x = new_point[1], y = new_point[2],
     xend = pull(neighbors[2, attrs[1]]),
     yend = pull(neighbors[2, attrs[2]])
-  ), color = "black", size = 0.5) +
+  ), color = "black", linewidth = 0.5) +
   geom_segment(aes(
     x = new_point[1], y = new_point[2],
     xend = pull(neighbors[3, attrs[1]]),
     yend = pull(neighbors[3, attrs[2]])
-  ), color = "black", size = 0.5)
+  ), color = "black", linewidth = 0.5)
 ```
 
 Here we chose the $K=3$ nearest observations, but there is nothing special
@@ -987,17 +987,17 @@ unscaled <- ggplot(unscaled_cancer, aes(x = Area,
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[1, attrs[1]]),
     yend = unlist(neighbors[1, attrs[2]])
-  ), color = "black", size = 0.5) +
+  ), color = "black", linewidth = 0.5) +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[2, attrs[1]]),
     yend = unlist(neighbors[2, attrs[2]])
-  ), color = "black", size = 0.5) +
+  ), color = "black", linewidth = 0.5) +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[3, attrs[1]]),
     yend = unlist(neighbors[3, attrs[2]])
-  ), color = "black", size = 0.5)
+  ), color = "black", linewidth = 0.5)
 
 # create new scaled obs and get NNs
 new_obs_scaled <- tibble(Area = -0.72, Smoothness = 2.8, Class = "unknown")
@@ -1032,17 +1032,17 @@ scaled <- ggplot(scaled_cancer, aes(x = Area,
     x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
     xend = unlist(neighbors_scaled[1, attrs[1]]),
     yend = unlist(neighbors_scaled[1, attrs[2]])
-  ), color = "black", size = 0.5) +
+  ), color = "black", linewidth = 0.5) +
   geom_segment(aes(
     x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
     xend = unlist(neighbors_scaled[2, attrs[1]]),
     yend = unlist(neighbors_scaled[2, attrs[2]])
-  ), color = "black", size = 0.5) +
+  ), color = "black", linewidth = 0.5) +
   geom_segment(aes(
     x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
     xend = unlist(neighbors_scaled[3, attrs[1]]),
     yend = unlist(neighbors_scaled[3, attrs[2]])
-  ), color = "black", size = 0.5)
+  ), color = "black", linewidth = 0.5)
 
 ggarrange(unscaled, scaled, ncol = 2, common.legend = TRUE, legend = "bottom")
 
