remove black lines from legends

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -360,7 +360,7 @@ perim_concav_with_new_point +
     y = new_point[2],
     xend = pull(neighbors[1, attrs[1]]),
     yend = pull(neighbors[1, attrs[2]])
-  ), color = "black", linewidth = 0.5)
+  ), color = "black", linewidth = 0.5, show.legend = FALSE)
 ```
 
 ```{r 05-knn-3, echo = FALSE}
@@ -407,7 +407,7 @@ perim_concav_with_new_point2 +
     y = new_point[2],
     xend = pull(neighbors[1, attrs[1]]),
     yend = pull(neighbors[1, attrs[2]])
-  ), color = "black", linewidth = 0.5)
+  ), color = "black", linewidth = 0.5, show.legend = FALSE)
 ```
 
 To improve the prediction we can consider several
@@ -424,17 +424,17 @@ perim_concav_with_new_point2 +
     x = new_point[1], y = new_point[2],
     xend = pull(neighbors[1, attrs[1]]),
     yend = pull(neighbors[1, attrs[2]])
-  ), color = "black", linewidth = 0.5) +
+  ), color = "black", linewidth = 0.5, show.legend = FALSE) +
   geom_segment(aes(
     x = new_point[1], y = new_point[2],
     xend = pull(neighbors[2, attrs[1]]),
     yend = pull(neighbors[2, attrs[2]])
-  ), color = "black", linewidth = 0.5) +
+  ), color = "black", linewidth = 0.5, show.legend = FALSE) +
   geom_segment(aes(
     x = new_point[1], y = new_point[2],
     xend = pull(neighbors[3, attrs[1]]),
     yend = pull(neighbors[3, attrs[2]])
-  ), color = "black", linewidth = 0.5)
+  ), color = "black", linewidth = 0.5, show.legend = FALSE)
 ```
 
 Here we chose the $K=3$ nearest observations, but there is nothing special
@@ -987,17 +987,17 @@ unscaled <- ggplot(unscaled_cancer, aes(x = Area,
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[1, attrs[1]]),
     yend = unlist(neighbors[1, attrs[2]])
-  ), color = "black", linewidth = 0.5) +
+  ), color = "black", linewidth = 0.5, show.legend = FALSE) +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[2, attrs[1]]),
     yend = unlist(neighbors[2, attrs[2]])
-  ), color = "black", linewidth = 0.5) +
+  ), color = "black", linewidth = 0.5, show.legend = FALSE) +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[3, attrs[1]]),
     yend = unlist(neighbors[3, attrs[2]])
-  ), color = "black", linewidth = 0.5)
+  ), color = "black", linewidth = 0.5, show.legend = FALSE)
 
 # create new scaled obs and get NNs
 new_obs_scaled <- tibble(Area = -0.72, Smoothness = 2.8, Class = "unknown")
@@ -1032,17 +1032,17 @@ scaled <- ggplot(scaled_cancer, aes(x = Area,
     x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
     xend = unlist(neighbors_scaled[1, attrs[1]]),
     yend = unlist(neighbors_scaled[1, attrs[2]])
-  ), color = "black", linewidth = 0.5) +
+  ), color = "black", linewidth = 0.5, show.legend = FALSE) +
   geom_segment(aes(
     x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
     xend = unlist(neighbors_scaled[2, attrs[1]]),
     yend = unlist(neighbors_scaled[2, attrs[2]])
-  ), color = "black", linewidth = 0.5) +
+  ), color = "black", linewidth = 0.5, show.legend = FALSE) +
   geom_segment(aes(
     x = unlist(new_obs_scaled[1]), y = unlist(new_obs_scaled[2]),
     xend = unlist(neighbors_scaled[3, attrs[1]]),
     yend = unlist(neighbors_scaled[3, attrs[2]])
-  ), color = "black", linewidth = 0.5)
+  ), color = "black", linewidth = 0.5, show.legend = FALSE)
 
 ggarrange(unscaled, scaled, ncol = 2, common.legend = TRUE, legend = "bottom")
 
@@ -1070,17 +1070,17 @@ ggplot(unscaled_cancer, aes(x = Area,
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[1, attrs[1]]),
     yend = unlist(neighbors[1, attrs[2]])
-  ), color = "black") +
+  ), color = "black", show.legend = FALSE) +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[2, attrs[1]]),
     yend = unlist(neighbors[2, attrs[2]])
-  ), color = "black") +
+  ), color = "black", show.legend = FALSE) +
   geom_segment(aes(
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbors[3, attrs[1]]),
     yend = unlist(neighbors[3, attrs[2]])
-  ), color = "black") +  
+  ), color = "black", show.legend = FALSE) +  
    facet_zoom(x = ( Area > 380 & Area < 420) , 
               y = (Smoothness > 0.08 & Smoothness < 0.14), zoom.size = 2) + 
     theme_bw() + 
@@ -1185,7 +1185,7 @@ for (i in 1:7) {
       x = new_point[1],
       y = new_point[2],
       xend = pull(neighbors[i, attrs[1]]),
-      yend = pull(neighbors[i, attrs[2]]), color = clr
+      yend = pull(neighbors[i, attrs[2]]), color = clr, show.legend = FALSE
     )
 }
 rare_plot + geom_point(aes(x = new_point[1], y = new_point[2]),
