knitr table style specification in viz/clsfn1

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -10,9 +10,7 @@ library(ggplot2)
 
 knitr::opts_chunk$set(echo = TRUE, 
                       fig.align = "center")
-options(knitr.table.format = function() {
-  if (knitr::is_latex_output()) 'latex' else 'pandoc'
-})
+options(knitr.table.format = ifelse(knitr::is_latex_output(), 'latex', 'html'))
 
 cleanup_and_print <- function(output){
    for (i in seq_along(output)) {
