--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -9,6 +9,8 @@ library(magick)
 
 
 knitr::opts_chunk$set(fig.align = "center")
+
+options(knitr.table.format = ifelse(knitr::is_latex_output(), "latex", "html"))
 ```
 
 ## Overview 
@@ -1491,7 +1493,7 @@ file_sizes <- tibble(`Image type` = c("Raster",
                                     / 1000000, 2), "MB"),
                         paste(round(file.info("img/viz/faithful_plot.svg")["size"] 
                                     / 1000000, 2), "MB")))
-kable(file_sizes,
+kable(file_sizes, booktabs = TRUE,
       caption = "File sizes of the scatter plot of the Old Faithful data set when saved as different file formats.") |>
   kable_styling(latex_options = "hold_position")
 ```
