pull_workflow_fit -> extract_fit_parsnip

--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -263,16 +263,16 @@ hidden_print(lm_fit)
 > the best fit coefficients are usually easier to interpret afterward.
 
 Our coefficients are 
-(intercept) $\beta_0=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)`
-and (slope) $\beta_1=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`.
+(intercept) $\beta_0=$ `r format(round(pull(tidy(extract_fit_parsnip(lm_fit)), estimate)[1]), scientific=FALSE)`
+and (slope) $\beta_1=$ `r format(round(pull(tidy(extract_fit_parsnip(lm_fit)), estimate)[2]), scientific=FALSE)`.
 This means that the equation of the line of best fit is
 
-$$\text{house sale price} = `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)` + `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`\cdot (\text{house size}).$$
+$$\text{house sale price} = `r format(round(pull(tidy(extract_fit_parsnip(lm_fit)), estimate)[1]), scientific=FALSE)` + `r format(round(pull(tidy(extract_fit_parsnip(lm_fit)), estimate)[2]), scientific=FALSE)`\cdot (\text{house size}).$$
 
 In other words, the model predicts that houses 
-start at \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), big.mark=",", nsmall=0, scientific=FALSE)` for 0 square feet, and that
+start at \$`r format(round(pull(tidy(extract_fit_parsnip(lm_fit)), estimate)[1]), big.mark=",", nsmall=0, scientific=FALSE)` for 0 square feet, and that
 every extra square foot increases the cost of 
-the house by \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`. Finally, 
+the house by \$`r format(round(pull(tidy(extract_fit_parsnip(lm_fit)), estimate)[2]), scientific=FALSE)`. Finally, 
 we predict on the test data set to assess how well our model does:
 
 ```{r 08-assessFinal}
@@ -314,12 +314,12 @@ lm_plot_final
 
 We can extract the coefficients from our model by accessing the
 fit object that is output by the `fit` \index{tidymodels!fit} function; we first have to extract
-it from the workflow using the `pull_workflow_fit` function, and then apply
+it from the workflow using the `extract_fit_parsnip` function, and then apply
 the `tidy` function to convert the result into a data frame:
 
 ```{r 08-lm-get-coeffs}
 coeffs <- lm_fit |>
-             pull_workflow_fit() |>
+             extract_fit_parsnip() |>
              tidy()
 
 coeffs
@@ -550,7 +550,7 @@ as shown below:
 
 ```{r 08-lm-multi-get-coeffs}
 mcoeffs <- mlm_fit |>
-             pull_workflow_fit() |>
+             extract_fit_parsnip() |>
              tidy()
 
 mcoeffs
@@ -728,7 +728,7 @@ lm_fit1 <- workflow() |>
   add_model(lm_spec) |>
   fit(data = sacramento_train)
 
-coeffs <- tidy(pull_workflow_fit(lm_fit1))
+coeffs <- tidy(extract_fit_parsnip(lm_fit1))
 
 icept1 <- format(round(coeffs |> 
                          filter(term == "(Intercept)") |>  
@@ -750,7 +750,7 @@ lm_fit2 <- workflow() |>
   add_model(lm_spec) |>
   fit(data = sacramento_train)
 
-coeffs <- tidy(pull_workflow_fit(lm_fit2))
+coeffs <- tidy(extract_fit_parsnip(lm_fit2))
 icept2 <- format(round(coeffs |> 
                          filter(term == "(Intercept)") |> 
                          pull(estimate)), 
@@ -771,7 +771,7 @@ lm_fit3 <- workflow() |>
   add_model(lm_spec) |>
   fit(data = sacramento_train)
 
-coeffs <- tidy(pull_workflow_fit(lm_fit3))
+coeffs <- tidy(extract_fit_parsnip(lm_fit3))
 icept3 <- format(round(coeffs |> 
                          filter(term == "(Intercept)") |> 
                          pull(estimate)), 
