--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -1374,16 +1374,20 @@ region_lang |>
 > also return `NA`s when we apply them to columns that 
 > contain `NA`s in the data frame.  \index{missing data}
 > 
-> To avoid this, again we need to add the argument `na.rm = TRUE`,
-> but in this case we need to use it a little bit differently.
-> In this case, we need to add a `,` and then `na.rm = TRUE`,
-> after specifying the function we want `summarize` + `across` to apply, 
-> as illustrated below:
+> To resolve this issue, again we need to add the argument `na.rm = TRUE`.
+> But in this case we need to use it a little bit differently:
+> we write a `~`, and then call the summary function
+> with the first argument `.x` and the second argument `na.rm = TRUE`.
+> For example, for the previous example with the `max` function, we would write 
 > 
 > ``` {r}
 > region_lang_na |>
->   summarize(across(mother_tongue:lang_known, max, na.rm = TRUE))
+>   summarize(across(mother_tongue:lang_known, ~ max(.x, na.rm = TRUE)))
 > ```
+> The meaning of this unusual syntax is a bit beyond the scope of this book,
+> but interested readers can look up *anonymous functions* in the `purrr` 
+> package from `tidyverse`.
+
 
 #### `map` for calculating summary statistics on many columns {-}
 
