--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -924,7 +924,7 @@ Variables with a large scale will have a much larger
 effect on deciding cluster assignment than variables with a small scale. 
 To address this problem, we need to create a recipe that 
 standardizes\index{standardization!K-means}\index{K-means!standardization} our data 
-before clustering using the `step_scale` and `step_center` preprocessing steps.
+before clustering using the `step_scale` and `step_center` preprocessing steps.\index{recipe!step\_scale}\index{recipe!step\_center}
 Standardization will ensure that each variable has a mean 
 of 0 and standard deviation of 1 prior to clustering.
 We will designate that all variables are to be used in clustering via
@@ -952,7 +952,7 @@ hidden_print_cli(kmeans_recipe)
 
 To indicate that we are performing K-means clustering, we will use the `k_means`
 model specification.\index{K-means!k\_means model specification} We will use the `num_clusters` argument to specify the number
-of clusters (here we choose K = 3), and specify that we are using the `"stats"` engine.
+of clusters (here we choose K = 3), and specify that we are using the `"stats"` engine.\index{K-means!stats engine}
 
 ```{r 10-kmeans-spec, message=FALSE, echo=TRUE, results=FALSE}
 kmeans_spec <- k_means(num_clusters = 3) |>
@@ -985,7 +985,7 @@ that can be used to visualize the clusters, pick K, and evaluate the total WSSD.
 Let's start by visualizing the clusters as a colored scatter plot! In 
 order to do that, we first need to augment our 
 original data frame with the cluster assignments. We can 
-achieve this using the `augment` function from `tidyclust`.
+achieve this using the `augment` function from `tidyclust`.\index{tidyclust!augment}\index{augment}
 ```{r 10-kmeans-extract-augment}
 clustered_data <- kmeans_fit |>
                     augment(penguins)
@@ -1058,13 +1058,13 @@ kmeans_spec
 hidden_print(kmeans_spec)
 ```
 We combine the recipe and specification in a workflow, and then
-use the `tune_cluster` function to run K-means on each of the different
+use the `tune_cluster` function\index{tidyclust!tune\_cluster} to run K-means on each of the different
 settings of `num_clusters`. The `grid` argument controls which values of
 K we want to try&mdash;in this case, the values from 1 to 9 that are 
 stored in the `penguin_clust_ks` data frame. We set the `resamples`
-argument to `apparent(penguins)` to tell K-means to run on the whole
+argument to `apparent(penguins)` to\index{tidymodels!apparent} tell K-means to run on the whole
 data set for each value of `num_clusters`. Finally, we collect the results
-using the `collect_metrics` function.
+using the `collect_metrics` function.\index{tidymodels!collect\_metrics}
 
 ```{r 10-hidden-seed-kmeans-results, echo=FALSE, message=FALSE, warning=FALSE, results=FALSE}
 set.seed(6)
@@ -1079,7 +1079,7 @@ kmeans_results <- workflow() |>
 kmeans_results
 ```
 The total WSSD results correspond to the `mean` column when the `.metric` variable is equal to `sse_within_total`.
-We can obtain a tidy data frame with this information using `filter` and `mutate`.
+We can obtain a tidy data frame with this information using `filter` and `mutate`.\index{filter}\index{mutate}
 
 ```{r 10-kmeans-next}
 kmeans_results <- kmeans_results |> 
@@ -1090,7 +1090,7 @@ kmeans_results
 ```
 
 Now that we have `total_WSSD` and `num_clusters` as columns in a data frame, we can make a line plot 
-(Figure \@ref(fig:10-plot-choose-k)) and search for the "elbow" to find which value of K to use. 
+(Figure \@ref(fig:10-plot-choose-k)) and search for the "elbow" to find which value of K to use. \index{elbow method}
 
 ```{r 10-plot-choose-k, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A plot showing the total WSSD versus the number of clusters."}
 elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = total_WSSD)) +
