initial editing, dumping in fodder text/eqns

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -45,7 +45,7 @@ theme_update(axis.title = element_text(size = 12)) # modify axis label size in p
 ## Overview 
 This chapter continues the introduction to predictive modeling through
 classification. While the previous chapter covered training and data
-preprocessing, this chapter focuses on how to evaluate the accuracy of
+preprocessing, this chapter focuses on how to evaluate the performance of
 a classifier, as well as how to improve the classifier (where possible)
 to maximize its accuracy.
 
@@ -56,11 +56,11 @@ By the end of the chapter, readers will be able to do the following:
 - Split data into training, validation, and test data sets.
 - Describe what a random seed is and its importance in reproducible data analysis.
 - Set the random seed in R using the `set.seed` function.
-- Evaluate classification accuracy in R using a validation data set and appropriate metrics.
+- Evaluate classification accuracy, precision, and recall in R using a validation data set and appropriate metrics.
 - Execute cross-validation in R to choose the number of neighbors in a $K$-nearest neighbors classifier.
 - Describe the advantages and disadvantages of the $K$-nearest neighbors classification algorithm.
 
-## Evaluating accuracy
+## Evaluating performance
 
 Sometimes our classifier might make the wrong prediction. A classifier does not
 need to be right 100\% of the time to be useful, though we don't want the
@@ -77,7 +77,7 @@ tumor images?
 
 The trick is to split the data into a **training set** \index{training set} and **test set** \index{test set} (Figure \@ref(fig:06-training-test))
 and use only the **training set** when building the classifier.
-Then, to evaluate the accuracy of the classifier, we first set aside the true labels from the **test set**,
+Then, to evaluate the performance of the classifier, we first set aside the true labels from the **test set**,
 and then use the classifier to predict the labels in the **test set**. If our predictions match the true
 labels for the observations in the **test set**, then we have some
 confidence that our classifier might also accurately predict the class
@@ -95,12 +95,32 @@ knitr::include_graphics("img/classification2/training_test.jpeg")
 
 How exactly can we assess how well our predictions match the true labels for
 the observations in the test set? One way we can do this is to calculate the
-**prediction accuracy**. \index{prediction accuracy|see{accuracy}}\index{accuracy} This is the fraction of examples for which the
+prediction **accuracy**. \index{prediction accuracy|see{accuracy}}\index{accuracy} This is the fraction of examples for which the
 classifier made the correct prediction. To calculate this, we divide the number
 of correct predictions by the number of predictions made. 
 
-$$\mathrm{prediction \; accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\mathrm{total \;  number \;  of  \; predictions}}$$
+$$\mathrm{accuracy} = \frac{\mathrm{number \; of  \; correct  \; predictions}}{\mathrm{total \;  number \;  of  \; predictions}}$$
 
+A more holistic view of the performance of the classifier can be obtained
+by looking at the *confusion matrix*. The confusion matrix shows how many
+test set labels of each type are predicted correctly and incorrectly, which
+gives us more detail about the kinds of mistakes the classifier tends to make. 
+
+|                   | True Benign | True Malignant |
+| ----------------- | ----------- | -------------- |
+| Predict Benign    |     5       |       2        |
+| Predict Malignant |     5       |       10       |
+
+- **True Positive:** A malignant observation that was classified as malignant.
+- **False Positive:** A benign observation that was classified as malignant.
+- **True Negative:** A benign observation that was classified as benign.
+- **False Negative:** A malignant observation that was classified as benign.
+
+"Of the positive predictions you made, how many were actually positive?"
+$$\mathrm{precision} = \frac{\mathrm{number \; of  \; correct \; positive \; predictions}}{\mathrm{total \;  number \;  of \; positive  \; predictions}}$$
+
+"Of the positive examples in the data, how many did you identify as positive?"
+$$\mathrm{recall} = \frac{\mathrm{number \; of  \; correct  \; positive \; predictions}}{\mathrm{total \;  number \;  of  \; positive \; examples}}$$
 
 The process for assessing if our predictions match the true labels in the 
 test set is illustrated in Figure \@ref(fig:06-ML-paradigm-test). Note that there 
